bynkc/tests/fixtures/negative/309_http_limits_unknown_field/src/api.bynk
context api

service api from http {
  limits {
    maxbody: 100,
  }

  on GET("/ping") by v: Visitor () -> Effect[HttpResult[String]] {
    Ok("pong")
  }
}
